--- a/home.html
+++ b/home.html
@@ -1,14 +1,270 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="./img/icon1.png" />
     <title>Visión Viajera</title>
-    <link rel="stylesheet" href="css/home.css">
-</head>
-<body> 
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="/Css/bootstrap.min.css" />
+  </head>
+  <body>
+    <!------- NAVBAR -------->
+    <nav
+      class="navbar navbar-toggleable-md navbar-light text-white"
+      style="background-color: #0aa2c0"
+    >
+      <div class="container">
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          data-toggle="collapse"
+          data-target="#fm-menu"
+          aria-controls="fm-menu"
+          aria-expanded="false"
+          aria-label="Menu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    
-</body>
+        <div class="nav-img">
+          <img src="./img/icon1.png" alt="" />
+          <a
+            href="/home.html"
+            class="navbar-brand text-right text-white font-weight-bold"
+            >Visión Viajera</a
+          >
+        </div>
+
+        <div class="collapse navbar-collapse" id="fm-menu">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a href="#quienes-Somos" class="nav-link active text-white font-weight-bold"
+                >Quienes Somos |</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a href="#" class="nav-link active text-white font-weight-bold"
+                >Promociones |</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a href="#" class="nav-link active text-white font-weight-bold"
+                >Desarrollador |</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a href="#" class="nav-link active text-white font-weight-bold"
+                >Reclamos |</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a href="#" class="nav-link active text-white font-weight-bold"
+                >Contacto</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!------- FIN NAVBAR -------->
+
+    <!--------CAROUSEL----------->
+
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleIndicators"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100"
+            src="/img/carousel/mendoza2.jpg"
+            alt="First slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/carousel/bariloche2.jpg"
+            alt="Second slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/carousel/chalten.jpg"
+            alt="Third slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/carousel/peritomoreno2.jpg"
+            alt="Fourth slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/carousel/bariloche3.jpg"
+            alt="Fifth slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/carousel/montañas2.jpg"
+            alt="Sith slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/carousel/montañas.jpg"
+            alt="Seventh slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/carousel/misiones.jpg"
+            alt="Octave slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/carousel/peritomoreno.jpg"
+            alt="Novena slide"
+          />
+        </div>
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <!-------- FIN CAROUSEL----------->
+
+    <!-------- QUIENES SOMOS----------->
+
+    <section class="container">
+      <h1 class="text-center font-weight-bold text-black mt-5">
+        Quienes Somos
+      </h1>
+      <p id="quienes-Somos" class="text-center font-weight-bold text-black mt-5">
+        Somos una empresa de viajes y turismo localizada en la Ciudad Autónoma
+        de Buenos Aires, dedicada a brindar asesoramiento integral en el rubro.
+        Nacimos con el sueño de ofrecer a los viajeros toda nuestra experiencia
+        y capacidad en el área, brindando un servicio de alta calidad y
+        adaptándonos a las exigencias de hoy. Contamos con una amplia variedad
+        de ofertas y paquetes turísticos personalizados que el cliente podrá
+        evaluar y cotizar a través de nuestro sitio web o realizar consultas y
+        dejar opiniones por nuestras redes sociales, respondiendo de manera
+        inmediata a los requerimientos de los clientes. Nuestra empresa está
+        totalmente orientada hacia las necesidades del cliente, teniendo en
+        cuenta sus preferencias y cultura. Priorizamos siempre su seguridad y
+        que sea una estadía memorable, por eso le ofrecemos comodidad y
+        conveniencia económica en todo momento.
+      </p>
+    </section>
+
+    <!-------- FIN QUIENES SOMOS----------->
+
+    <!-------- CARD VENTAS----------->
+    <div class="container mt-5 d-flex flex-wrap justify-content-center">
+    <div class="card m-3 p-2 card-practica" style="width: 18rem;">
+        <img class="card-img-top" src="/img/Card/viaje-caminar.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center mt-3">Card title</h5>
+          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+      <div class="card m-3 p-2 card-practica" style="width: 18rem;">
+        <img class="card-img-top" src="/img/Card/iguazu.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center mt-3">Card title</h5>
+          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+      <div class="card m-3 p-2 card-practica" style="width: 18rem;">
+        <img class="card-img-top" src="/img/Card/viñedo.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center mt-3">Card title</h5>
+          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+      <div class="card m-3 p-2 card-practica" style="width: 18rem;">
+        <img class="card-img-top" src="/img/Card/tierra-del-fuego.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center mt-3">Card title</h5>
+          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+      <div class="card m-3 p-2 card-practica" style="width: 18rem;">
+        <img class="card-img-top" src="/img/Card/chalten.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center mt-3">Card title</h5>
+          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+
+     <div class="card m-3 p-2 card-practica" style="width: 18rem;">
+        <img class="card-img-top" src="/img/Card/jujuy.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center mt-3">Card title</h5>
+          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+    </div>
+
+    <!-------- FIN CARD VENTAS----------->
+
+
+
+    <script src="/Js/jquery-3.2.1.min.js"></script>
+    <script src="/Js/bootstrap.min.js"></script>
+  </body>
 </html>
