--- a/home.html
+++ b/home.html
@@ -7,6 +7,20 @@
     <title>Visión Viajera</title>
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="/Css/bootstrap.min.css" />
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Favicone -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!------- NAVBAR -------->
@@ -38,31 +52,39 @@
         <div class="collapse navbar-collapse" id="fm-menu">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a href="#quienes-Somos" class="nav-link active text-white font-weight-bold"
+              <a
+                href="#quienes-Somos"
+                class="nav-link active text-white font-weight-bold"
                 >Quienes Somos |</a
               >
             </li>
 
             <li class="nav-item">
-              <a href="#" class="nav-link active text-white font-weight-bold"
+              <a
+                href="#promociones"
+                class="nav-link active text-white font-weight-bold"
                 >Promociones |</a
               >
             </li>
 
             <li class="nav-item">
-              <a href="#" class="nav-link active text-white font-weight-bold"
+              <a
+                href="#desarrollador"
+                class="nav-link active text-white font-weight-bold"
                 >Desarrollador |</a
               >
             </li>
 
-            <li class="nav-item">
+            <li class="#">
               <a href="#" class="nav-link active text-white font-weight-bold"
                 >Reclamos |</a
               >
             </li>
 
             <li class="nav-item">
-              <a href="#" class="nav-link active text-white font-weight-bold"
+              <a
+                href="#"
+                class="nav-link active text-white font-weight-bold"
                 >Contacto</a
               >
             </li>
@@ -184,11 +206,9 @@
 
     <!-------- QUIENES SOMOS----------->
 
-    <section class="container">
-      <h1 class="text-center font-weight-bold text-black mt-5">
-        Quienes Somos
-      </h1>
-      <p id="quienes-Somos" class="text-center font-weight-bold text-black mt-5">
+    <section class="container" id="quienes-Somos">
+      <h1 class="text-center text-black mt-5 display-4">Quienes Somos</h1>
+      <p class="text-center font-weight-bold text-black mt-5">
         Somos una empresa de viajes y turismo localizada en la Ciudad Autónoma
         de Buenos Aires, dedicada a brindar asesoramiento integral en el rubro.
         Nacimos con el sueño de ofrecer a los viajeros toda nuestra experiencia
@@ -208,62 +228,341 @@
     <!-------- FIN QUIENES SOMOS----------->
 
     <!-------- CARD VENTAS----------->
+    <h2 class="text-center text-black mt-5 display-4">Destinos Turisticos</h2>
     <div class="container mt-5 d-flex flex-wrap justify-content-center">
-    <div class="card m-3 p-2 card-practica" style="width: 18rem;">
-        <img class="card-img-top" src="/img/Card/viaje-caminar.png" alt="Card image cap">
+      <div class="card m-3 p-2 card-practica" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="/img/Card/viaje-caminar.png"
+          alt="Card image cap"
+        />
         <div class="card-body">
-          <h5 class="card-title text-center mt-3">Card title</h5>
-          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title text-center mt-3">Trekking autoguiado</h5>
+          <p class="card-text text-center">
+            Prácticamente todos son gratuitos y no requieren experiencia previa
+            en la montaña. De todas formas puedes contratar un guía para tu
+            mayor tranquilidad, especialmente para los de mayor dificultad.
+          </p>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
       </div>
-      <div class="card m-3 p-2 card-practica" style="width: 18rem;">
-        <img class="card-img-top" src="/img/Card/iguazu.jpg" alt="Card image cap">
+      <div class="card m-3 p-2 card-practica" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="/img/Card/iguazu.jpg"
+          alt="Card image cap"
+        />
         <div class="card-body">
-          <h5 class="card-title text-center mt-3">Card title</h5>
-          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title text-center mt-3">Las Cataratas del Iguazú</h5>
+          <p class="card-text text-center">
+            Las cataratas del Iguazú, llamadas popularmente en Argentina, son un
+            conjunto de cataratas que se localizan sobre el río Iguazú, en el
+            límite entre la provincia argentina de Misiones y el estado
+            brasileño de Paraná.
+          </p>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
       </div>
-      <div class="card m-3 p-2 card-practica" style="width: 18rem;">
-        <img class="card-img-top" src="/img/Card/viñedo.jpg" alt="Card image cap">
+      <div class="card m-3 p-2 card-practica" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="/img/Card/viñedo.jpg"
+          alt="Card image cap"
+        />
         <div class="card-body">
-          <h5 class="card-title text-center mt-3">Card title</h5>
-          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title text-center mt-3">Mendoza</h5>
+          <p class="card-text text-center">
+            Mendoza es una ciudad de la región de Cuyo en Argentina y es el
+            corazón de la zona vitivinícola argentina, famosa por sus Malbecs y
+            otros vinos tintos.
+          </p>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
       </div>
-      <div class="card m-3 p-2 card-practica" style="width: 18rem;">
-        <img class="card-img-top" src="/img/Card/tierra-del-fuego.jpg" alt="Card image cap">
+      <div class="card m-3 p-2 card-practica" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="/img/Card/tierra-del-fuego.jpg"
+          alt="Card image cap"
+        />
         <div class="card-body">
-          <h5 class="card-title text-center mt-3">Card title</h5>
-          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title text-center mt-3">Tierra del Fuego</h5>
+          <p class="card-text text-center">
+            Tierra del Fuego, Antártida e Islas del Atlántico Sur, en el texto
+            de la Constitución provincial: Provincia de Tierra del Fuego,
+            Antártida e Islas del Atlántico Sur, es una de las veintitrés
+            provincias que conforman la República Argentina.
+          </p>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
       </div>
-      <div class="card m-3 p-2 card-practica" style="width: 18rem;">
-        <img class="card-img-top" src="/img/Card/chalten.jpg" alt="Card image cap">
+      <div class="card m-3 p-2 card-practica" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="/img/Card/chalten.jpg"
+          alt="Card image cap"
+        />
         <div class="card-body">
-          <h5 class="card-title text-center mt-3">Card title</h5>
-          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title text-center mt-3">
+            Monte Fitz Roy/Cerro Chaltén
+          </h5>
+          <p class="card-text text-center">
+            El monte Fitz Roy o cerro Chaltén, es una montaña de 3405 m,ubicada
+            al oriente del campo de hielo Patagónico Sur en la frontera entre
+            Argentina y Chile, en la Patagonia, cerca de la villa de El Chaltén.
+          </p>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
       </div>
 
-     <div class="card m-3 p-2 card-practica" style="width: 18rem;">
-        <img class="card-img-top" src="/img/Card/jujuy.jpg" alt="Card image cap">
+      <div class="card m-3 p-2 card-practica" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="/img/Card/jujuy.jpg"
+          alt="Card image cap"
+        />
         <div class="card-body">
-          <h5 class="card-title text-center mt-3">Card title</h5>
-          <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title text-center mt-3">San Salvador de Jujuy</h5>
+          <p class="card-text text-center">
+            San Salvador de Jujuy es una ciudad del noroeste de Argentina,
+            cabecera del departamento Doctor Manuel Belgrano y capital y ciudad
+            más poblada de la provincia de Jujuy.
+          </p>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
       </div>
     </div>
-
     <!-------- FIN CARD VENTAS----------->
 
+    <!-------- PROMOCIONES ----------->
+    <!-- <h2 class="text-center text-black mt-5 display-4" id="promociones">
+      Promociones
+    </h2> -->
+    <!-------- FIN PROMOCIONES ----------->
+
+    <!--   CARD DESARROLLADOR -->
+    <h2 class="text-center mt-5 display-4" id="desarrollador">Desarrollador</h2>
+    <section
+      class="p-4 p-md-5 text-center text-lg-start shadow-1-strong rounded mt-4"
+      style="
+        background-image: url(https://mdbcdn.b-cdn.net/img/Photos/Others/background2.webp);
+      "
+    >
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-10">
+          <div class="card">
+            <div class="card-body m-3">
+              <div class="row">
+                <div
+                  class="col-lg-4 d-flex justify-content-center align-items-center mb-4 mb-lg-0"
+                >
+                  <img
+                    src="/img/desarrollador/cv.jpg"
+                    class="rounded-circle img-fluid shadow-1"
+                    alt="woman avatar"
+                    width="200"
+                    height="200"
+                  />
+                </div>
+                <div class="col-lg-8">
+                  <section>
+                    <h2>Matias Minig</h2>
+                    <h3 class="mt-4">Analista de Sistemas | Desarrollador Web</h3>
+                    <p class="text-muted fw-light mb-2 mt-3">
+                      A partir del 2018 comencé en un Instituto de Formación
+                      Técnica Superior (Analisis de Sistemas). Mi perfil lo
+                      oriento a desarrollo web con HTML, CSS, JavaScript, React,
+                      Metodologías ágiles,Bases de Datos.
+                    </p>
+
+                    <ul class="des-ul">
+                      <li>
+                        <a
+                          href="https://linktr.ee/MatiasMinig"
+                          target="_blank"
+                          class="fa fa-tree"
+                        ></a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://github.com/MatiasMinig"
+                          target="_blank"
+                          class="fa fa-github"
+                        ></a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.linkedin.com/in/matiasminig/"
+                          target="_blank"
+                          class="fa fa-linkedin"
+                        ></a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://matiasminig.github.io/Portafolio/"
+                          class="fa fa-link"
+                        ></a>
+                      </li>
+                    </ul>
+                  </section>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--  FIN CARD DESARROLLADOR -->
 
 
+    <!-------- TESTIMONIOS ----------->
+    <section>
+      <div class="row d-flex justify-content-center mt-5">
+        <div class="col-md-4 col-xl-4 text-center">
+          <h2 class="mb-5 display-4">Testimonios</h2>
+          <p class="mb-4 pb-2 mb-md-5 pb-md-0">
+            Algunos de nuestros clientes hablan de nosotros y sus propias
+            experiencias.
+          </p>
+        </div>
+      </div>
+
+      <div class="row text-center">
+        <div class="col-md-4 mb-5 mb-md-0">
+          <div class="d-flex justify-content-center mb-4">
+            <img
+              src="/img//testimonios/persona1.jpg"
+              class="rounded-circle shadow-1-strong"
+              width="150"
+              height="150"
+            />
+          </div>
+          <h5 class="mb-3">Maria Smantha</h5>
+          <h6 class="text-primary mb-3">Web Developer</h6>
+          <p class="px-xl-3">
+            <i class="fas fa-quote-left pe-2 text-center"></i>Feliz de viajar y
+            conocer el sur de la Argentina, emocionada por sus comidas y vinos.
+            ¡¡Fabuloso!! La creación de un grupo de watssapp exclusivo con
+            Ignacio, Damián y yo, me hizo confiar y tener seguridad en la
+            organización y en que si surgía algún problema (y más especialmente
+            al viajar sola) iba a estar en contacto directo, rápido y ágil con
+            ellos para solucionarlo.
+          </p>
+          <ul class="list-unstyled d-flex justify-content-center mb-0">
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star-half-alt fa-sm text-warning"></i>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4 mb-5 mb-md-0">
+          <div class="d-flex justify-content-center mb-4">
+            <img
+              src="/img/testimonios/persona2.jpg"
+              class="rounded-circle shadow-1-strong"
+              width="150"
+              height="150"
+            />
+          </div>
+          <h5 class="mb-3">Lisa Cudrow</h5>
+          <h6 class="text-primary mb-3">Graphic Designer</h6>
+          <p class="px-xl-3">
+            <i class="fas fa-quote-left pe-2 text-center"></i>Que no lo piensen
+            y vayan a conocer Argentina sin ningún tipo de temor ni duda. Creo
+            que se tiene una visión errónea del país (o al menos yo la tenía
+            porque no me esperaba encontrarme con tanta maravilla como me he
+            encontrado, en todos los sentidos). Y mi entorno de familia y
+            amistades cuando han visto las fotos y les he contado todo también
+            les ha sorprendido mucho.
+          </p>
+          <ul class="list-unstyled d-flex justify-content-center mb-0">
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4 mb-0">
+          <div class="d-flex justify-content-center mb-4">
+            <img
+              src="/img/testimonios/persona3.jpg"
+              class="rounded-circle shadow-1-strong"
+              width="150"
+              height="150"
+            />
+          </div>
+          <h5 class="mb-3">John Smith</h5>
+          <h6 class="text-primary mb-3">Architect</h6>
+          <p class="px-xl-3">
+            <i class="fas fa-quote-left pe-2 text-center"></i>Muy buena
+            información previa sobre las excursiones disponibles y los destinos.
+            Seguimiento en destino fantástico. Puntualidad y excursiones en
+            grupos muy pequeños, se puede decir que personalizados para mí.
+            Argentina recomendable al 100%. He venido maravillada del país, la
+            gente, la comida, la seguridad… todo!! Y por supuesto sé que volveré
+            porque me han quedado muchas cosas por ver
+          </p>
+          <ul class="list-unstyled d-flex justify-content-center mb-5">
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="fas fa-star fa-sm text-warning"></i>
+            </li>
+            <li>
+              <i class="far fa-star fa-sm text-warning"></i>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-------- FIN TESTIMONIOS ----------->
+
+    <!-------- FOOTER ----------->
+    <footer class="bg-light text-center text-lg-start">
+      <div
+        class="text-center p-3"
+        style="background-color: rgba(11, 81, 132, 0.2)"
+      >
+        © 2022 Copyright:
+        <a
+          class="text-dark"
+          target="_blank"
+          href="https://www.linkedin.com/in/matiasminig/"
+          >Matias Minig</a
+        >
+      </div>
+    </footer>
+
+    <!-------- FIN FOOTER ----------->
     <script src="/Js/jquery-3.2.1.min.js"></script>
     <script src="/Js/bootstrap.min.js"></script>
   </body>
