Creacion y validacion de clima y contacto

--- a/home.html
+++ b/home.html
@@ -61,6 +61,14 @@
 
             <li class="nav-item">
               <a
+                href="#desarrollador" 
+                class="nav-link active text-white font-weight-bold"
+                >Desarrollador |</a 
+              >
+            </li>
+
+            <li class="nav-item">
+              <a
                 href="#promociones"
                 class="nav-link active text-white font-weight-bold"
                 >Promociones |</a
@@ -68,22 +76,14 @@
             </li>
 
             <li class="nav-item">
-              <a
-                href="#desarrollador"
-                class="nav-link active text-white font-weight-bold"
-                >Desarrollador |</a
-              >
-            </li>
-
-            <li class="#">
-              <a href="#" class="nav-link active text-white font-weight-bold"
-                >Reclamos |</a
+              <a href="/clima.html" class="nav-link active text-white font-weight-bold"
+                >Clima |</a
               >
             </li>
 
             <li class="nav-item">
               <a
-                href="#"
+                href="/contacto.html"
                 class="nav-link active text-white font-weight-bold"
                 >Contacto</a
               >
@@ -334,11 +334,7 @@
     </div>
     <!-------- FIN CARD VENTAS----------->
 
-    <!-------- PROMOCIONES ----------->
-    <!-- <h2 class="text-center text-black mt-5 display-4" id="promociones">
-      Promociones
-    </h2> -->
-    <!-------- FIN PROMOCIONES ----------->
+  
 
     <!--   CARD DESARROLLADOR -->
     <h2 class="text-center mt-5 display-4" id="desarrollador">Desarrollador</h2>
@@ -400,6 +396,7 @@
                       <li>
                         <a
                           href="https://matiasminig.github.io/Portafolio/"
+                          target="_blank"
                           class="fa fa-link"
                         ></a>
                       </li>
@@ -413,6 +410,12 @@
       </div>
     </section>
     <!--  FIN CARD DESARROLLADOR -->
+
+      <!-------- PROMOCIONES ----------->
+    <!-- <h2 class="text-center text-black mt-5 display-4" id="promociones">
+      Promociones
+    </h2> -->
+    <!-------- FIN PROMOCIONES ----------->
 
 
     <!-------- TESTIMONIOS ----------->
@@ -564,6 +567,7 @@
 
     <!-------- FIN FOOTER ----------->
     <script src="/Js/jquery-3.2.1.min.js"></script>
+    <script src=" http://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
     <script src="/Js/bootstrap.min.js"></script>
   </body>
 </html>
