Creación y desarrollo de página Promociones.

--- a/clima.html
+++ b/clima.html
@@ -42,7 +42,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="/home.html#promociones" class="nav-link active text-white font-weight-bold">Promociones
+                        <a href="/promociones.html" class="nav-link active text-white font-weight-bold">Promociones
                             |</a>
                     </li>
 
