--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
 
             <li class="nav-item">
               <a
-                href="#promociones"
+                href="/promociones.html"
                 class="nav-link active text-white font-weight-bold"
                 >Promociones |</a
               >
