--- a/contacto.html
+++ b/contacto.html
@@ -1,249 +1,149 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="./img/icon1.png" />
-    <title>Visión Viajera</title>
-    <link rel="stylesheet" href="css/home.css" />
-    <link rel="stylesheet" href="/Css/bootstrap.min.css" />
-    <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      rel="stylesheet"
-    />
-    <!-- Favicone -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!------- NAVBAR -------->
-    <nav
-      class="navbar navbar-toggleable-md navbar-light text-white"
-      style="background-color: #0aa2c0"
-    >
-      <div class="container">
-        <button
-          class="navbar-toggler navbar-toggler-right"
-          data-toggle="collapse"
-          data-target="#fm-menu"
-          aria-controls="fm-menu"
-          aria-expanded="false"
-          aria-label="Menu"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="nav-img">
-          <img src="./img/icon1.png" alt="" />
-          <a
-            href="/home.html"
-            class="navbar-brand text-right text-white font-weight-bold"
-            >Visión Viajera</a
-          >
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" href="./img/icon1.png" />
+  <title>Visión Viajera</title>
+  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="/Css/bootstrap.min.css" />
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- Favicone -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+</head>
 
-        <div class="collapse navbar-collapse" id="fm-menu">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a
-                href="/home.html#quienes-Somos"
-                class="nav-link active text-white font-weight-bold"
-                >Quienes Somos |</a
-              >
-            </li>
+<body>
+  <!------- NAVBAR -------->
+  <nav class="navbar navbar-toggleable-md navbar-light text-white" style="background-color: #0aa2c0">
+    <div class="container">
+      <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#fm-menu"
+        aria-controls="fm-menu" aria-expanded="false" aria-label="Menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <li class="nav-item">
-              <a
-                href="/home.html#desarrollador"
-                class="nav-link active text-white font-weight-bold"
-                >Desarrollador |</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <a
-                href="/home.html#promociones"
-                class="nav-link active text-white font-weight-bold"
-                >Promociones |</a
-              >
-            </li>
-
-            <li class="/clima.html">
-              <a href="#" class="nav-link active text-white font-weight-bold"
-                >Clima |</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <a
-                href="/contacto.html"
-                class="nav-link active text-white font-weight-bold"
-                >Contacto</a
-              >
-            </li>
-          </ul>
-        </div>
+      <div class="nav-img">
+        <img src="./img/icon1.png" alt="" />
+        <a href="/home.html" class="navbar-brand text-right text-white font-weight-bold">Visión Viajera</a>
       </div>
-    </nav>
 
-    <!------- FIN NAVBAR -------->
+      <div class="collapse navbar-collapse" id="fm-menu">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a href="/home.html#quienes-Somos" class="nav-link active text-white font-weight-bold">Quienes Somos |</a>
+          </li>
 
-    <!--------CAROUSEL----------->
+          <li class="nav-item">
+            <a href="/home.html#desarrollador" class="nav-link active text-white font-weight-bold">Desarrollador |</a>
+          </li>
 
-    <div
-      id="carouselExampleIndicators"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <ol class="carousel-indicators">
-        <li
-          data-target="#carouselExampleIndicators"
-          data-slide-to="0"
-          class="active"
-        ></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/mendoza2.jpg"
-            alt="First slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/bariloche2.jpg"
-            alt="Second slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/chalten.jpg"
-            alt="Third slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/peritomoreno2.jpg"
-            alt="Fourth slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/bariloche3.jpg"
-            alt="Fifth slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/montañas2.jpg"
-            alt="Sith slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/montañas.jpg"
-            alt="Seventh slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/misiones.jpg"
-            alt="Octave slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/peritomoreno.jpg"
-            alt="Novena slide"
-          />
-        </div>
+          <li class="nav-item">
+            <a href="/promociones.html" class="nav-link active text-white font-weight-bold">Promociones |</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/clima.html" class="nav-link active text-white font-weight-bold">Clima |</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/contacto.html" class="nav-link active text-white font-weight-bold">Contacto</a>
+          </li>
+        </ul>
       </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
-    <!-------- FIN CAROUSEL----------->
+  </nav>
 
-    <!-------- FORM CONTACTO ----------->
-    <section class="mb-5 container rounded" style="background: url(../img/carousel/mendoza.jpg) no-repeat center center; background-size: cover; border-radius: 8px;">
+  <!------- FIN NAVBAR -------->
+
+  <!--------CAROUSEL----------->
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="/img/carousel/mendoza2.jpg" alt="First slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/bariloche2.jpg" alt="Second slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/chalten.jpg" alt="Third slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/peritomoreno2.jpg" alt="Fourth slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/bariloche3.jpg" alt="Fifth slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/montañas2.jpg" alt="Sith slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/montañas.jpg" alt="Seventh slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/misiones.jpg" alt="Octave slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/peritomoreno.jpg" alt="Novena slide" />
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <!-------- FIN CAROUSEL----------->
+
+  <!-------- FORM CONTACTO ----------->
+  <div class="contenedor-cel">
+    <section class="mb-5 container rounded"
+      style="background: url(../img/carousel/mendoza.jpg) no-repeat center center; background-size: cover; border-radius: 8px;">
       <!--Section heading-->
-      <h2
-        class="h1 font-weight-bold text-center text-white my-4 p-3 mt-5"
-      >
+      <h2 class="h1 font-weight-bold text-center text-white my-4 p-3 mt-5">
         Contacto o Reclamos
       </h2>
       <!--Section description-->
       <div id="resultado">
-      <p class="text-center w-responsive text-white font-weight-bold mx-auto mb-5 mt-3">
-        ¿Tiene alguna pregunta? No dude en ponerse en contacto con nosotros
-        directamente. Nuestro equipo se pondrá en contacto con usted en cuestión
-        de horas para ayudarle.
-      </p>
-    </div>
-      
+        <p class="text-center w-responsive text-white font-weight-bold mx-auto mb-5 mt-3">
+          ¿Tiene alguna pregunta? No dude en ponerse en contacto con nosotros
+          directamente. Nuestro equipo se pondrá en contacto con usted en cuestión
+          de horas para ayudarle.
+        </p>
+      </div>
+
       <div class="row">
         <!--Grid column-->
         <div class="col-md-9 mb-md-0 mb-5">
           <!-- Contenedor que muestra el mensaje de error -->
           <div id="alerta-Contacto"></div>
 
-          <div
-            class="bg-success rounded m-3 w-50 text-center text-white font-weight-bold status"
-          ></div>
-          <form
-            action="https://formsubmit.co/matiasminig@gmail.com"
-            id="formulario"
-            name="formulario"
-            action="mail.php" 
-            method="POST"
-            enctype="multipart/form-data"
-          >
-          <!-- action="mail.php"  -->
+          <div class="bg-success rounded m-3 w-50 text-center text-white font-weight-bold status"></div>
+          <form action="https://formsubmit.co/matiasminig@gmail.com" id="formulario" name="formulario" method="POST"
+            enctype="multipart/form-data">
+            <!-- action="mail.php"  -->
             <!--Grid row-->
             <div class="row">
               <!--Grid column-->
               <div class="col-md-6">
                 <div class="md-form mb-0">
-                  <input type="text" id="nombre" class="form-control" />
+                  <input type="text" id="nombre" name="nombre" class="form-control" />
                   <label class="text-white font-weight-bold" for="nombre" class="nombre">Nombre</label>
                 </div>
               </div>
@@ -252,7 +152,7 @@
               <!--Grid column-->
               <div class="col-md-6">
                 <div class="md-form mb-0">
-                  <input type="text" id="email" class="form-control" />
+                  <input type="text" id="email" name="email" class="form-control" />
                   <label class="text-white font-weight-bold" for="email">Email</label>
                 </div>
               </div>
@@ -264,7 +164,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="md-form mb-0">
-                  <input type="text" id="asunto" class="form-control" />
+                  <input type="text" id="asunto" name="asunto" class="form-control" />
                   <label class="text-white font-weight-bold" for="asunto" class="">Asunto</label>
                 </div>
               </div>
@@ -276,34 +176,17 @@
               <!--Grid column-->
               <div class="col-md-12">
                 <div class="md-form">
-                  <textarea
-                    type="text"
-                    id="mensaje"
-                    rows="2"
-                    class="form-control md-textarea"
-                  ></textarea>
+                  <textarea type="text" id="mensaje" rows="2" class="form-control md-textarea"
+                    name="mensaje"></textarea>
                   <label class="text-white font-weight-bold" for="mensaje">Mensaje</label>
                 </div>
               </div>
             </div>
-            <input
-              class="m-3"
-              type="file"
-              name="attachment"
-              accept="image/png, image/jpeg"
-            />
+            <input class="m-3" type="file" name="attachment" accept="image/png, image/jpeg" />
             <!--Grid row-->
             <div class="text-center text-md-left d-flex justify-content-center">
-              <input
-                class="btn btn-primary text-white m-3 w-25"
-                type="submit"
-                value="Enviar"
-              />
-              <input
-                type="hidden"
-                name="_next"
-                value="http://127.0.0.1:5500/exito.html"
-              />
+              <input class="btn btn-primary text-white m-3 w-25" type="submit" value="Enviar" />
+              <input type="hidden" name="_next" value="http://127.0.0.1:5500/exito.html" />
               <input type="hidden" name="_captcha" value="false" />
             </div>
           </form>
@@ -332,28 +215,22 @@
         <!--Grid column-->
       </div>
     </section>
-    <!-------- FIN FORM CONTACTO ----------->
+  </div>
+  <!-------- FIN FORM CONTACTO ----------->
 
-    <!-------- FOOTER ----------->
-    <footer class="bg-light text-center text-lg-start">
-      <div
-        class="text-center p-3"
-        style="background-color: rgba(11, 81, 132, 0.2)"
-      >
-        © 2022 Copyright:
-        <a
-          class="text-dark"
-          target="_blank"
-          href="https://www.linkedin.com/in/matiasminig/"
-          >Matias Minig</a
-        >
-      </div>
-    </footer>
+  <!-------- FOOTER ----------->
+  <footer class="bg-light text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(11, 81, 132, 0.2)">
+      © 2022 Copyright:
+      <a class="text-dark" target="_blank" href="https://www.linkedin.com/in/matiasminig/">Matias Minig</a>
+    </div>
+  </footer>
 
-    <!-------- FIN FOOTER ----------->
-    <script src="/Js/jquery-3.2.1.min.js"></script>
-    <script src=" http://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
-    <script src="/Js/bootstrap.min.js"></script>
-    <script src="/Js/contacto.js"></script>
-  </body>
+  <!-------- FIN FOOTER ----------->
+  <script src="/Js/jquery-3.2.1.min.js"></script>
+  <script src=" http://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
+  <script src="/Js/bootstrap.min.js"></script>
+  <script src="/Js/contacto.js"></script>
+</body>
+
 </html>
