--- a/exito.html
+++ b/exito.html
@@ -1,255 +1,150 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="./img/icon1.png" />
-    <title>Visión Viajera</title>
-    <link rel="stylesheet" href="css/home.css" />
-    <link rel="stylesheet" href="/Css/bootstrap.min.css" />
-    <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      rel="stylesheet"
-    />
-    <!-- Favicone -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!------- NAVBAR -------->
-    <nav
-      class="navbar navbar-toggleable-md navbar-light text-white"
-      style="background-color: #0aa2c0"
-    >
-      <div class="container">
-        <button
-          class="navbar-toggler navbar-toggler-right"
-          data-toggle="collapse"
-          data-target="#fm-menu"
-          aria-controls="fm-menu"
-          aria-expanded="false"
-          aria-label="Menu"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="nav-img">
-          <img src="./img/icon1.png" alt="" />
-          <a
-            href="/home.html"
-            class="navbar-brand text-right text-white font-weight-bold"
-            >Visión Viajera</a
-          >
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" href="./img/icon1.png" />
+  <title>Visión Viajera</title>
+  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="/Css/bootstrap.min.css" />
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- Favicone -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+</head>
 
-        <div class="collapse navbar-collapse" id="fm-menu">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a
-                href="/home.html#quienes-Somos"
-                class="nav-link active text-white font-weight-bold"
-                >Quienes Somos |</a
-              >
-            </li>
+<body>
+  <!------- NAVBAR -------->
+  <nav class="navbar navbar-toggleable-md navbar-light text-white" style="background-color: #0aa2c0">
+    <div class="container">
+      <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#fm-menu"
+        aria-controls="fm-menu" aria-expanded="false" aria-label="Menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <li class="nav-item">
-              <a
-                href="/home.html#desarrollador"
-                class="nav-link active text-white font-weight-bold"
-                >Desarrollador |</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <a
-                href="/home.html#promociones"
-                class="nav-link active text-white font-weight-bold"
-                >Promociones |</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <a href="/clima.html" class="nav-link active text-white font-weight-bold"
-                >Clima |</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <a
-                href="/contacto.html"
-                class="nav-link active text-white font-weight-bold"
-                >Contacto</a
-              >
-            </li>
-          </ul>
-        </div>
+      <div class="nav-img">
+        <img src="./img/icon1.png" alt="" />
+        <a href="/home.html" class="navbar-brand text-right text-white font-weight-bold">Visión Viajera</a>
       </div>
-    </nav>
 
-    <!------- FIN NAVBAR -------->
+      <div class="collapse navbar-collapse" id="fm-menu">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a href="/home.html#quienes-Somos" class="nav-link active text-white font-weight-bold">Quienes Somos |</a>
+          </li>
 
-    <!--------CAROUSEL----------->
+          <li class="nav-item">
+            <a href="/home.html#desarrollador" class="nav-link active text-white font-weight-bold">Desarrollador |</a>
+          </li>
 
-    <div
-      id="carouselExampleIndicators"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <ol class="carousel-indicators">
-        <li
-          data-target="#carouselExampleIndicators"
-          data-slide-to="0"
-          class="active"
-        ></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/mendoza2.jpg"
-            alt="First slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/bariloche2.jpg"
-            alt="Second slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/chalten.jpg"
-            alt="Third slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/peritomoreno2.jpg"
-            alt="Fourth slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/bariloche3.jpg"
-            alt="Fifth slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/montañas2.jpg"
-            alt="Sith slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/montañas.jpg"
-            alt="Seventh slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/misiones.jpg"
-            alt="Octave slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/carousel/peritomoreno.jpg"
-            alt="Novena slide"
-          />
-        </div>
+          <li class="nav-item">
+            <a href="/promociones.html" class="nav-link active text-white font-weight-bold">Promociones |</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/clima.html" class="nav-link active text-white font-weight-bold">Clima |</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/contacto.html" class="nav-link active text-white font-weight-bold">Contacto</a>
+          </li>
+        </ul>
       </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
-    <!-------- FIN CAROUSEL----------->
+  </nav>
 
-    <!-------- FORM CONTACTO ----------->
+  <!------- FIN NAVBAR -------->
+
+  <!--------CAROUSEL----------->
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="/img/carousel/mendoza2.jpg" alt="First slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/bariloche2.jpg" alt="Second slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/chalten.jpg" alt="Third slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/peritomoreno2.jpg" alt="Fourth slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/bariloche3.jpg" alt="Fifth slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/montañas2.jpg" alt="Sith slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/montañas.jpg" alt="Seventh slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/misiones.jpg" alt="Octave slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/img/carousel/peritomoreno.jpg" alt="Novena slide" />
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <!-------- FIN CAROUSEL----------->
+
+  <!-------- FORM EXITO ----------->
+  <div class="contenedor-cel">
     <section class="mb-5 container rounded" style="background-color: #cedce6">
       <!--Section heading-->
-      <h2
-        class="h1-responsive font-weight-bold text-center text-black my-4 p-3 mt-5"
-      >
+      <h2 class="h1-responsive font-weight-bold text-center text-black my-4 p-3 mt-5">
         Contacto con Nosotros
       </h2>
       <!--Section description-->
       <div class="d-flex justify-content-center">
-        <p
-          class="bg-success rounded p-3 m-3 w-50 text-center text-white font-weight-bold"
-        >
+        <p class="bg-success rounded p-3 m-3 w-50 text-center text-white font-weight-bold">
           Gracias por enviarnos un mensaje, pronto trataremos de contestarlo a
           la brevedad!!
         </p>
       </div>
       <div class="d-flex justify-content-center">
-        <a
-          href="/home.html"
-          class="btn btn-primary text-center m-3 w-25 text-white font-weight-bold"
-          >Volver</a
-        >
+        <a href="/home.html" class="btn btn-primary text-center m-3 w-25 text-white font-weight-bold">Volver</a>
       </div>
     </section>
-    <!-------- FIN FORM CONTACTO ----------->
+  </div>
+  <!-------- FIN FORM EXITO ----------->
 
-    <!-------- FOOTER ----------->
-    <footer class="bg-light text-center text-lg-start">
-      <div
-        class="text-center p-3"
-        style="background-color: rgba(11, 81, 132, 0.2)"
-      >
-        © 2022 Copyright:
-        <a
-          class="text-dark"
-          target="_blank"
-          href="https://www.linkedin.com/in/matiasminig/"
-          >Matias Minig</a
-        >
-      </div>
-    </footer>
+  <!-------- FOOTER ----------->
+  <footer class="bg-light text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(11, 81, 132, 0.2)">
+      © 2022 Copyright:
+      <a class="text-dark" target="_blank" href="https://www.linkedin.com/in/matiasminig/">Matias Minig</a>
+    </div>
+  </footer>
 
-    <!-------- FIN FOOTER ----------->
-    <script src="/Js/jquery-3.2.1.min.js"></script>
-    <script src=" http://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
-    <script src="/Js/bootstrap.min.js"></script>
-    <script src="/Js/contacto.js"></script>
-  </body>
+  <!-------- FIN FOOTER ----------->
+  <script src="/Js/jquery-3.2.1.min.js"></script>
+  <script src=" http://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
+  <script src="/Js/bootstrap.min.js"></script>
+  <script src="/Js/contacto.js"></script>
+</body>
+
 </html>
