--- a/contacto.html
+++ b/contacto.html
@@ -190,6 +190,7 @@
               <input type="hidden" name="_captcha" value="false" />
             </div>
           </form>
+          <a href="mailto:matiasminig@gmail.com" id="button-envio"></a>
         </div>
         <!--Grid column -->
 
