Modificaciones de letras

--- a/home.html
+++ b/home.html
@@ -207,18 +207,20 @@
     <!-------- QUIENES SOMOS----------->
 
     <section class="container" id="quienes-Somos">
-      <h1 class="text-center text-black mt-5 display-4">Quienes Somos</h1>
-      <p class="text-center font-weight-bold text-black mt-5">
+      <h1 class="text-center text-black mt-5 display-1 letra">Quienes Somos</h1>
+      <p class="text-center font-weight-bold text-black mt-5 container letra display-4">
         Somos una empresa de viajes y turismo localizada en la Ciudad Autónoma
-        de Buenos Aires, dedicada a brindar asesoramiento integral en el rubro.
+        de Buenos Aires, dedicada a brindar asesoramiento integral en el rubro.<br><br>
         Nacimos con el sueño de ofrecer a los viajeros toda nuestra experiencia
         y capacidad en el área, brindando un servicio de alta calidad y
-        adaptándonos a las exigencias de hoy. Contamos con una amplia variedad
+        adaptándonos a las exigencias de hoy.<br><br>Contamos con una amplia variedad
         de ofertas y paquetes turísticos personalizados que el cliente podrá
         evaluar y cotizar a través de nuestro sitio web o realizar consultas y
         dejar opiniones por nuestras redes sociales, respondiendo de manera
-        inmediata a los requerimientos de los clientes. Nuestra empresa está
+        adaptándonos a las exigencias de hoy.<br><br>Contamos con una amplia variedad
+        inmediata a los requerimientos de los clientes, nuestra empresa está
         totalmente orientada hacia las necesidades del cliente, teniendo en
+        adaptándonos a las exigencias de hoy.<br><br>Contamos con una amplia variedad
         cuenta sus preferencias y cultura. Priorizamos siempre su seguridad y
         que sea una estadía memorable, por eso le ofrecemos comodidad y
         conveniencia económica en todo momento.
@@ -228,7 +230,7 @@
     <!-------- FIN QUIENES SOMOS----------->
 
     <!-------- CARD VENTAS----------->
-    <h2 class="text-center text-black mt-5 display-4">Destinos Turisticos</h2>
+    <h2 class="text-center text-black mt-5 display-1 letra">Destinos Turisticos</h2>
     <div class="container mt-5 d-flex flex-wrap justify-content-center">
       <div class="card m-3 p-2 card-practica" style="width: 18rem">
         <img
@@ -337,7 +339,7 @@
   
 
     <!--   CARD DESARROLLADOR -->
-    <h2 class="text-center mt-5 display-4" id="desarrollador">Desarrollador</h2>
+    <h2 class="text-center mt-5 display-2 letra" id="desarrollador">Desarrollador</h2>
     <section
       class="p-4 p-md-5 text-center text-lg-start shadow-1-strong rounded mt-4"
       style="
@@ -422,7 +424,7 @@
     <section>
       <div class="row d-flex justify-content-center mt-5">
         <div class="col-md-4 col-xl-4 text-center">
-          <h2 class="mb-5 display-4">Testimonios</h2>
+          <h2 class="mb-5 display-2 letra">Testimonios</h2>
           <p class="mb-4 pb-2 mb-md-5 pb-md-0">
             Algunos de nuestros clientes hablan de nosotros y sus propias
             experiencias.
